2004/04/11 19:16 (-0400) muppetman

	* GClosure.xs: don't clobber $_ when warning of unhandled exceptions.
	apparently the SAVE_DEFSV trick from a while back doesn't work.

	* Subclass.pm: beef up the docs.

2004/04/08 23:22 (-0400) muppetman

	* Glib.pm, README, NEWS: stable release 1.041

2004/04/08 23:13 (-0400) muppetman

	merge of bugfixes on HEAD:

	* Glib.xs: gperl_sv_from_filename didn't check the return status
	of g_filename_to_utf8 properly, causing segfaults on invalid
	filenames. (actually pcg's fix.)

2004/04/04 12:56 (-0500) rwmcfa1

	* GErrox.xs: unused var warnings fixed.

	* Glib.xs: quite some warnings in the runtime version checking.

2004/04/04 00:52 (-0500) muppetman

	* Glib.xs: actually do work in filename_from_unicode().  thanks to
	Jan Hudec for noticing this was broken.

2004/03/23 20:20 (-0500) muppetman

	* Glib.pm, README, NEWS: stable release 1.040

2004/03/22 11:02 (-0500) muppetman

	* typemap, GBoxed.xs: use INT2PTR to hush warnings about improper
	casting on cygwin.

2004/03/19 03:35 (-0500) muppetman

	* Glib.pm, NEWS, README: 1.040 release candidate 1  (1.0391)

2004/03/17 17:09 (+0100) kaffeetisch

	* gperl.h (SvGObject_ornull): Use SvOK instead of SvTRUE.

	* gperl.h
	* typemap: Add typemaps for "const char_ornull *" and
	"char_ornull *".

2004/03/17 01:10 (-0500) muppetman

	* MakeHelper.pm: d'oh!  bad escaping makes your code not working.

2004/03/16 22:05 (-0500) muppetman

	* GMainLoop.xs, GObject.xs: bump version checks from 2.3 to 2.4; we
	don't claim to work with unstable gtk+.

2004/03/16 13:17 (-0500) muppetman

	* GUtils.xs: rename Glib::Version manpage to Glib::version, for
	consistency with other modules and the fact that it's really a
	'meta' manpage.
	
	* GUtils.xs, t/1.t: Add, document, and test Glib::GET_VERSION_INFO.

	* GenPod.pm: sort the names going into podindex, which has the effect
	of sorting the items listed in the <package>::index pod page.

2004/03/13 22:05 (-0500) muppetman
