@@ -1,3 +1,10 @@
+2004/04/12 01:25 (+0200) kaffeetisch
+
+	* GenPod.pm
+	* Glib.pm
+	* MakeHelper.pm
+	* ParseXSDoc.pm: Fix a spelling error here, adjust some grammar there.
+
 2004/04/11 19:16 (-0400) muppetman
 
 	* GClosure.xs: don't clobber $_ when warning of unhandled exceptions.
